--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Dasar</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="assets/styles/style.css" />
 </head>
@@ -37,9 +38,7 @@
                         University and I'm majoring in Informatics Engineering and I want to become a Fullstack Web
                         Developer.
                     </p>
-
                     <button onclick="scrollToAbout()">Lebih lanjut</button>
-
                 </div>
             </div>
         </main>
@@ -124,8 +123,6 @@
             </p>
         </article>
 
-
-
         <aside class="informasi-tambahan">
             <h2>Hobi</h2>
             <p>Di luar pengembangan web, saya juga tertarik pada</p>
@@ -167,7 +164,6 @@
                                 <i class="fab fa-github"></i>
                             </a>
                         </li>
-
                     </ul>
                 </div>
             </footer>
