merubah sedikit isinya

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 <li><a href="#Keindahan Alam" onclick="smoothScroll(event, 'Keindahan Alam')">Keindahan Alam</a></li>
                 <li><a href="#Warisan Budaya" onclick="smoothScroll(event, 'Warisan Budaya')">Warisan Budaya</a></li>
                 <li><a href="#Kuliner Khas" onclick="smoothScroll(event, 'Kuliner Khas')">Kuliner Khas</a></li>
-                <li><a href="#Contact" onclick="smoothScroll(event, 'Contact')">Contact</a></li>
+                <li><a href="#Hubungi Kami" onclick="smoothScroll(event, 'Hubungi Kami')">Hubungi Kami</a></li>
             </ul>
         </nav>
     </header>
     <!-- akhir header -->
-
-    <section id="home">
-        <main>
+     
+    <main>
+        <section id="home">
             <div class="content">
                 <h1>BANTEN</h1>
                 <img src="assets/image/Banten3.jpeg" alt="Banten Logo">
@@ -160,7 +160,8 @@
                 <p>Tak hanya itu, berbagai upacara adat, seperti Seren Taun yang diadakan oleh masyarakat Baduy, juga
                     menjadi bagian penting dari identitas budaya Banten. Seren Taun merupakan ritual tahunan sebagai
                     ungkapan rasa syukur kepada Sang Pencipta atas hasil panen. Semua aspek ini menunjukkan betapa
-                    kayanya Banten dalam hal warisan budaya, yang masih dilestarikan hingga kini oleh masyarakatnya.</p><br>
+                    kayanya Banten dalam hal warisan budaya, yang masih dilestarikan hingga kini oleh masyarakatnya.</p>
+                <br>
 
                 <div class="card-container">
                     <!-- Card 1 -->
@@ -219,31 +220,31 @@
                     dipanggang hingga matang. Hidangan ini menjadi favorit banyak orang, terutama karena tekstur bandeng
                     yang lembut berpadu dengan rasa bumbu khas yang meresap sempurna.</P><br>
 
-                    <p>Selain itu, Rabeg adalah salah satu kuliner legendaris dari Banten yang berbahan dasar daging
+                <p>Selain itu, Rabeg adalah salah satu kuliner legendaris dari Banten yang berbahan dasar daging
                     kambing. Makanan ini memiliki cita rasa gurih dengan rempah-rempah yang kaya, serta disajikan dalam
                     kuah kental. Rabeg biasanya disajikan pada acara-acara spesial seperti hajatan atau perayaan
                     keagamaan, dan telah menjadi simbol kemewahan kuliner di daerah tersebut. Cita rasa Rabeg yang khas
                     menjadikannya salah satu hidangan yang wajib dicoba ketika berkunjung ke Banten.</p><br>
 
-                    <p>Tak ketinggalan, Nasi Uduk Banten juga merupakan sajian yang populer di kalangan masyarakat
+                <p>Tak ketinggalan, Nasi Uduk Banten juga merupakan sajian yang populer di kalangan masyarakat
                     setempat. Nasi yang dimasak dengan santan dan rempah-rempah ini biasanya disajikan dengan lauk pauk
                     seperti ayam goreng, tempe, dan sambal yang pedas. Kelezatan nasi uduk ini terletak pada aroma harum
                     dari santan yang meresap ke dalam nasi, memberikan rasa gurih yang menggoda. Hidangan ini sering
                     disajikan sebagai menu sarapan atau makan siang, menawarkan cita rasa yang sederhana namun
                     memuaskan.</p><br>
 
-                    <p>Selain hidangan berat, Banten juga dikenal dengan jajanan tradisional yang lezat. Salah satunya
+                <p>Selain hidangan berat, Banten juga dikenal dengan jajanan tradisional yang lezat. Salah satunya
                     adalah Opak Banten, sejenis kerupuk yang terbuat dari singkong atau ketan yang dipipihkan dan
                     dipanggang hingga kering. Opak ini memiliki tekstur renyah dan sering dinikmati sebagai camilan atau
                     pendamping nasi. Rasanya yang gurih dan renyah menjadikannya favorit di berbagai acara adat maupun
                     sehari-hari.</p><br>
 
-                    <p>Terakhir, Jojorong salah satu kudapan manis khas Banten yang sayang untuk dilewatkan.
+                <p>Terakhir, Jojorong salah satu kudapan manis khas Banten yang sayang untuk dilewatkan.
                     Kue ini terbuat dari tepung beras, gula aren, dan santan yang disajikan dalam daun pisang. Rasa
                     manis dari gula aren dan gurih dari santan berpadu sempurna di setiap gigitannya, membuat kue
                     jojorong menjadi salah satu ikon kuliner tradisional Banten yang masih digemari hingga kini.</p><br>
 
-                    <p>Dengan kekayaan kuliner yang beragam, Banten menawarkan cita rasa yang memanjakan lidah, mulai dari
+                <p>Dengan kekayaan kuliner yang beragam, Banten menawarkan cita rasa yang memanjakan lidah, mulai dari
                     makanan berat hingga jajanan tradisional yang menggugah selera.</p><br>
 
                 <div class="card-container">
@@ -308,39 +309,36 @@
                         </div>
                     </div>
             </section>
-        </main>
+    </main>
 
-
-        <section id="Contact">
-            <footer>
-                <h2>Informasi kontak</h2>
-                <p>Anda dapat menghubungi saya melalui platform berikut</p>
-                <div class="social-media">
-                    <ul>
-                        <li>
-                            <a href="https://www.linkedin.com/in/muhamad-rivaldi-330b79271"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://wa.me/087782881451"><i class="fab fa-whatsapp"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/muhamadrivalldi_"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/muhamadrivaldi1" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-github"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </footer>
-
-            <h2>Kontak</h2>
-            <p>Untuk informasi lebih lanjut, silakan hubungi kami di <a
-                    href="mailto:info@banten.com">info@banten.com</a>.</p>
+    <footer>
+        <section id="Hubungi Kami">
+            <h2>Hubungi Kami</h2>
+            <div class="social-media">
+                <ul>
+                    <li>
+                        <a href="https://www.linkedin.com/in/muhamad-rivaldi-330b79271"><i
+                                class="fab fa-linkedin-in"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://wa.me/087782881451"><i class="fab fa-whatsapp"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/muhamadrivalldi_"><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/muhamadrivaldi1" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <br><br><p>Untuk informasi lebih lanjut, silakan hubungi kami di <a
+                    href="mailto:info@banten.com">info@banten.com</a>.
+            </p>
         </section>
-        <script src="assets/script.js"></script>
+    </footer>
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
