merubah sedikit isinya

--- a/index.html
+++ b/index.html
@@ -367,11 +367,8 @@
         <p>
             Salah satu kekayaan Banten adalah budaya Debus, yang melibatkan pertunjukan kekuatan fisik luar biasa.
         </p>
+        <img src="assets/image/lokasi.png" alt="Lokasi Banten" class="lokasi-img">
     </aside>
-
-    <div class="flex-container">
-        <img src="assets/image/lokasi.png" alt="Lokasi" class="flex-image">
-    </div>
     
     <footer>
         <section id="Hubungi Kami">
