merubah sedikit isinya

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <main>
         <section id="home">
             <div class="content">
-                <h1>BANTEN</h1>
-                <img src="assets/image/Banten3.jpeg" alt="Banten Logo">
+                <h1>BANTEN</h1><br>
+                <img src="assets/image/Banten3.jpeg" alt="Banten Logo"><br>
                 <p>Banten, sebuah provinsi yang terletak di ujung barat Pulau Jawa, dikenal dengan keindahan alamnya
-                    yang menakjubkan dan kekayaan budaya yang kaya.</p>
+                    yang menakjubkan dan kekayaan budaya yang kaya.</p><br>
             </div>
 
             <section id="Tentang">
@@ -65,7 +65,7 @@
                         rabeg,
                         juga menjadi bagian tak terpisahkan dari kekayaan budaya yang dimiliki provinsi ini. Dengan
                         kombinasi sejarah, alam, dan budaya yang begitu kaya, Banten menawarkan pengalaman wisata yang
-                        lengkap bagi para pengunjung yang ingin menjelajahi pesona Indonesia yang autentik.</p><br>
+                        lengkap bagi para pengunjung yang ingin menjelajahi pesona Indonesia yang autentik.</p><br><br>
                 </article>
             </section>
 
@@ -346,30 +346,32 @@
                     </div>
                 </div>
                 </section>
+
+                <section>
+                    <aside class="sidebar">
+                        <h3>Informasi Tambahan</h3>
+                        <ul>
+                            <li><a href="#Sejarah">Sejarah Banten</a></li>
+                            <li><a href="#DestinasiPopuler">Destinasi Populer</a></li>
+                            <li><a href="#Budaya">Budaya Lokal</a></li>
+                            <li><a href="#Kuliner">Kuliner Favorit</a></li>
+                        </ul>
+                        <h4>Fakta Singkat</h4>
+                        <p>
+                            Banten adalah sebuah provinsi yang terletak di bagian paling barat Pulau Jawa, Indonesia. Provinsi ini
+                            berbatasan langsung dengan Laut Jawa di utara, DKI Jakarta dan Jawa Barat di timur, Samudra Hindia di
+                            selatan, serta Selat Sunda di barat yang memisahkannya dengan Pulau Sumatra. Ibu kotanya adalah Kota Serang.
+                            Banten memiliki beberapa destinasi wisata terkenal seperti Taman Nasional Ujung Kulon dan Pantai Anyer.
+                            Selain itu, Banten juga kaya akan budaya lokal, termasuk Debus dan tradisi Baduy.
+                        </p>
+                        <p>
+                            Salah satu kekayaan Banten adalah budaya Debus, yang melibatkan pertunjukan kekuatan fisik luar biasa.
+                        </p>
+                        <img src="assets/image/lokasi.png" alt="Lokasi Banten" class="lokasi-img">
+                    </aside>
+                </section>
     </main>
 
-    <aside class="sidebar">
-        <h3>Informasi Tambahan</h3>
-        <ul>
-            <li><a href="#Sejarah">Sejarah Banten</a></li>
-            <li><a href="#DestinasiPopuler">Destinasi Populer</a></li>
-            <li><a href="#Budaya">Budaya Lokal</a></li>
-            <li><a href="#Kuliner">Kuliner Favorit</a></li>
-        </ul>
-        <h4>Fakta Singkat</h4>
-        <p>
-            Banten adalah sebuah provinsi yang terletak di bagian paling barat Pulau Jawa, Indonesia. Provinsi ini
-            berbatasan langsung dengan Laut Jawa di utara, DKI Jakarta dan Jawa Barat di timur, Samudra Hindia di
-            selatan, serta Selat Sunda di barat yang memisahkannya dengan Pulau Sumatra. Ibu kotanya adalah Kota Serang.
-            Banten memiliki beberapa destinasi wisata terkenal seperti Taman Nasional Ujung Kulon dan Pantai Anyer.
-            Selain itu, Banten juga kaya akan budaya lokal, termasuk Debus dan tradisi Baduy.
-        </p>
-        <p>
-            Salah satu kekayaan Banten adalah budaya Debus, yang melibatkan pertunjukan kekuatan fisik luar biasa.
-        </p>
-        <img src="assets/image/lokasi.png" alt="Lokasi Banten" class="lokasi-img">
-    </aside>
-    
     <footer>
         <section id="Hubungi Kami">
             <h2>Hubungi Kami</h2>
